# gronn

./: .gitignore  Cargo.toml  README.md  file_list.txt  make_package.sh
examples/adder1/: Cargo.toml  config.json  config.toml
examples/adder1/src/: main.rs
examples/adder2/: Cargo.toml  config.json  config.toml
examples/adder2/src/: main.rs
examples/iris1/: Cargo.toml  config.json  config.toml  iris_data.json
examples/iris1/src/: main.rs
examples/iris2/: Cargo.toml  config.json  config.toml  iris_data.toml
examples/iris2/src/: main.rs
examples/xor1/: Cargo.toml  config.json  config.toml
examples/xor1/src/: main.rs
examples/xor2/: Cargo.toml  config.json  config.toml
examples/xor2/src/: main.rs
src/: driver.rs  gn_network.rs  gn_node.rs  gn_output_node.rs  lib.rs  network.rs  network_configurations.rs  node.rs  property.rs
src/trained_networks/: adder04.json  adder04.toml  adder05.json  adder05.toml  adder05_1.json  adder05_2.json  adder06.json  adder06.toml  adder06_1.json  adder06_2.json  adder07.json  adder07.toml  adder08.json  adder08.toml  adder09.json  adder09.toml  iris02.json  iris03.json  iris03.toml  iris04.json  iris04.toml  iris05.json  iris05.toml  iris06.json  iris06.toml  iris07.json  iris07.toml  iris08.toml  xor02.json  xor02.toml  xor02_1.toml  xor02_2.json  xor02_2.toml  xor03.json  xor03.toml  xor03_1.json  xor03_1.toml  xor03_2.json  xor03_2.toml  xor04.json  (+6 more)
